--- a/1NT/1ntMain.tex
+++ b/1NT/1ntMain.tex
@@ -16,13 +16,14 @@
         \item 2\spades\ - Range Ask lub 6+\clubs
         \item 2\nt\ - Transfer na 6+\diams
         \item 3\clubs\ - Puppet Stayman
-        \item 3\diams\ - 5/5 w \minor\ \gf \br
+        \item 3\diams\ - 22(5/4)
         \item 3\hearts\ - 31(5/4)
         \item 3\spades\ - 13(5/4)
         \item 3\nt\ - do gry \br
         \item 4\clubs\ - 5/5 \major bez aspiracji szlemikowych
         \item 4\diams\ - Transfer na 6+\hearts 
         \item 4\hearts\ - Transfer na 6+\spades
+        \item 4\spades\ - 5/5 \minor
     \end{itemize}
     
     \pagebreak
@@ -54,7 +55,7 @@
     \subsection{1\ntx\ --- 2\clubs \\ 2\hearts\ --- ?}
     \begin{itemize}
         \item \pass\ - Dopuszczalne
-        \item 2\spades\ - do pasa, 5\spades, 4\diams
+        \item 2\spades\ - do pasa
         \item 2\nt\ - Inwit do 3\nt \br
         \item 3\clubs\ - 5+\clubs, \gf
         \item 3\diams\ - 5+\diams, \gf 
@@ -116,7 +117,7 @@
         \item 3\clubs\ - maximum (16-17)
     \end{itemize}
 
-    \subsection{1\ntx\ --- 2\spades \\ 2\nt\ --- ?}
+    \subsection{1\ntx\ --- 2\spades \\ 2\ntx\ --- ?}
     \begin{itemize}
         \item \pass\ - Z minimum bez trefli
         \item 3\clubs\ - Do pasa z treflami \br
