--- a/Lebensohl/Lebensohl_Basic.tex
+++ b/Lebensohl/Lebensohl_Basic.tex
@@ -18,7 +18,7 @@
         \item Kolory na poziomie 2 są słabe i do pasa
         \item Kolory na poziomie 3 są 5+ i \gf
         \item Duże transfery grają normalnie jeśli są z przeskokiem \br
-        \item \dbl jest karna
+        \item \dbl\ jest karna
         \item 2\nt\ to \emph{Lebensohl} - wymusza automat 3\clubs\ u partnera,
         poprawienie na inny kolor jest do pasa \br
         \item Kolor przeciwnika to \textbf{Stayman} bez trzymania, 3\nt\ jest do gry \textbf{bez trzymania}
