--- a/other/tutorial.tex
+++ b/other/tutorial.tex
@@ -156,7 +156,7 @@
         \begin{tabular}{rc}
         \multicolumn{1}{c}{Karta} & Licytuj \\
         \hhand{KQ98}{6543}{AJ8}{32} & 1\hearts \\
-        \hhand{J8743}{KQ43}{A87}{2} & 2\spades \\
+        \hhand{J8743}{AKQ43}{K87}{2} & 2\spades \\
         \hhand{KJ8}{K46}{AQ94}{2} & 3\nt \\
         \hhand{T98}{K46}{AQ94}{2} & 1\nt
         \end{tabular}
