--- a/other/tutorial.tex
+++ b/other/tutorial.tex
@@ -65,14 +65,18 @@
     lub rękę, która nadrabia brakujące punkty układem.
 
     \subsection{Strefy}
-    Jako odpowiadający możemy wpaść w cztery strefy:
+    Jako odpowiadający możemy wpaść w \textbf{cztery strefy}:
     \begin{itemize}
-        \item Nic (0-6 PC) - żeby tu szła końcówka, partner musi mieć $\geq$ 19 punktów,
+        \item \color{Periwinkle}\textbf{Nic} \color{black} (0-6 PC) - żeby tu szła końcówka, partner musi mieć $\geq$ 19 punktów,
         na co szansa jest mała - \textbf{pasujemy}
-        \item Poparcie (7-10 PC) - tu wystarczy 15-18 punktów u partnera, trzeba \textbf{podtrzymać licytację}!
-        \item Inwit (11-12 PC) - Do końcówki brakuje nam minimalnej nadwyżki u partnera, chcemy żeby dołożył
-        mając 13-14. Licytujemy \textbf{wyżej}, ale jeszcze nie końcówkę
-        \item Forsing (13+ PC) - Wiemy, że mamy co najmniej 25 - \textbf{sami wrzucamy końcówkę}
+        \item \color{Emerald}\textbf{Poparcie} \color{black}(7-10 PC)
+         - tu wystarczy 15-18 punktów u partnera, trzeba \textbf{podtrzymać licytację}! 
+         Partner może później założyć, że mamy 7 i spasować, zainwitować lub dołożyć końcówkę.
+        \item \color{YellowOrange}\textbf{Inwit} \color{black} (11-12 PC) - 
+        Do końcówki brakuje nam minimalnej nadwyżki u partnera, chcemy żeby dołożył
+        mając 1-2 punkty więcej niż minimum otwarcia. Licytujemy \textbf{wyżej}, ale jeszcze nie końcówkę
+        \item \color{BrickRed}\textbf{Forsing} \color{black}(13+ PC) - Wiemy, że mamy razem 
+        co najmniej 25 - \textbf{sami wrzucamy końcówkę}
     \end{itemize}
 
     \pagebreak
