--- a/other/tutorial.tex
+++ b/other/tutorial.tex
@@ -40,7 +40,7 @@
     \end{itemize}
 
     Z tych powodów wszystkie systemy licytacji w brydżu mają na celu przede wszystkim sprawdzenie,
-    czy jesteśmy wystarczająco silni na końcówkę, oraz priorytetyzują grę w kolory starsze i \nt.
+    czy jesteśmy wystarczająco silni na końcówkę oraz priorytetyzują grę w kolory starsze i \nt.
 
     Na razie pominiemy też szukanie w licytacji szlemików i szlemów - zysk z tego jest niewspółmiernie
     mały do zysku z prawidłowego znajdowania końcówek.
@@ -160,7 +160,7 @@
         \begin{tabular}{rc}
         \multicolumn{1}{c}{Karta} & Licytuj \\
         \hhand{KQ98}{6543}{AJ8}{32} & 1\hearts \\
-        \hhand{J8743}{AKQ43}{K87}{2} & 2\spades \\
+        \hhand{J8743}{AKQ3}{K87}{2} & 2\spades \\
         \hhand{KJ8}{K46}{AQ94}{2} & 3\nt \\
         \hhand{T98}{K46}{AQ94}{2} & 1\nt
         \end{tabular}
