--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -43,7 +43,7 @@
 \newcommand{\gf}{\color{BrickRed}\textbf{GF}\color{black}}
 \newcommand{\nf}{\color{Green}\textbf{NF}\color{black}}
 \newcommand{\fonce}{\color{RedViolet}\textbf{F1}\color{black}\hspace{4pt}}
-\newcommand{\inv}{\color{PineGreen}\textbf{Inwit}\color{black}}
+\newcommand{\inv}{\color{PineGreen}\textbf{INV}\color{black}}
 \newcommand{\slamtry}{\color{WildStrawberry}\textbf{Slam Try}\color{black}\hspace{4pt}}
 \newcommand{\minor}{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}\color{black}}
 \newcommand{\major}{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}\color{black}}
@@ -81,7 +81,6 @@
         #1
     \end{tabular}
 }
-
 
 \newcommand{\hhand}[4]{
     {\lsstyle \bspades #1 \bhearts #2 \bdiams #3 \bclubs #4}
