--- a/SAYC/sayc.tex
+++ b/SAYC/sayc.tex
@@ -49,7 +49,7 @@
     \item 2\hearts\ - 5\spades, 4+\hearts, 4-8 PC
     \item 2\spades\ - transfer na \nt, ręka co najmniej \inv.
     \item 2\nt\ - \gf\ BAL (jak wyżej)
-    \item 3\clubs\ - \mixed\ z 5+\clubs\
+    \item 3\clubs\ - \inv\ z 5+\clubs, taki bardzo treflowy
 \end{itemize}
 
 \pagebreak
