--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -141,3 +141,13 @@
   {%
     \vspace{2pt}\end{adjustwidth}\endMakeFramed%
   }
+
+
+\newcommand{\allbidding}[1]{
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cccc}
+            #1
+        \end{tabular}
+    \end{table}
+}
