--- a/SAYC/sayc.tex
+++ b/SAYC/sayc.tex
@@ -159,7 +159,7 @@
 
 \subsection{Niemożliwe 4\diams}
 Zalicytowanie 4\diams, nie wykonując uprzednio transferu na \diams, jest odzywką niemożliwą, i ustala
-ten kolor, \textbf{którego ustalenie ma sens}. Stąd wniosek, że transfer na \diams trzeba wykonywać zawsze, 
+ten kolor, \textbf{którego ustalenie ma sens}. Stąd wniosek, że transfer na \diams\ trzeba wykonywać zawsze, 
 jeśli się go ma.
 
 \subsection{Dodatkowe ustalenia}
@@ -253,6 +253,36 @@ Streszczenie kontynuacji w 3 zdania:
     \item 3\hearts\ - \gf\ z 4\spades
 \end{itemize}
 * tutaj pokazanie krótkości wysokiej (\hearts) jest \gf\ NO I HUJ
+
+
+
+% ******* %
+% Gazilli %
+% ******* %
+\pagebreak
+\section{Gazilli}
+W sekwencjach 1\hearts\ --- 1\spades, 1\hearts\ --- 1\nt\ oraz 1\spades\ --- 1\nt, rebid 2\clubs\
+jest naturalny, lub z dowolną ręką 16+. Odpowiedź 2\diams\ na to 2\clubs\ jest sztuczna i pokazuje 8+ oraz ustawia \gf.
+
+\subsection{1\major\ --- 1X \\ 2\clubs\ --- ?}
+\begin{itemize} 
+    \item 2\diams\ - \textbf{dowolne 8+}
+    \subitem 2\major\ - "Moje trefle były naturalne i mam jednak 11-15"
+    \subitem Inne - 16+, naturalne
+    \subitem Bezpośredni splinter jest silniejszy niż przez Gazilli
+    \subitem Bezpośredni skok kolorem na 3x pokazuje 5/5, przez Gazilli 5/4
+    \item 2\major\ - 5-7, negatywny powrót na kolor
+    \item 2\spades\ (po 1\hearts) - 5/5\minor (bo jest niemożliwe), 
+    generalnie wszystko co przechodzi 2\major\ pokazuje max singla w nim
+    \item 2\nt\ - 5-7, ręka z singlem w kolorze otwarcia, która nie ma lepszej odzywki
+    \item 3 w kolor - 5-7, naturalne z 6.
+    \item \textbf{Wyjątek} - 1\hearts\ --- 1\spades\ / 2\clubs\ --- 3\spades\ = 10-11 \inv\ z 6+\spades
+\end{itemize}
+
+
+
+
+
 
 
 
