--- a/SAYC/sayc.tex
+++ b/SAYC/sayc.tex
@@ -18,6 +18,7 @@
     \item Preferencja kolorów starszych w słabych rękach - pomijamy 1\diams, jeśli mamy starszą czwórkę i rękę maksymalnie \inv.
     \item Zachowana jest strefowa struktura podniesień 1\major\ - nie gramy Jacoby 2NT
     \item Bezrewersowe 2/1 z niepoważnym 3\nt
+    \item Podniesienia z trójki w licytacji jednostronnej i dwustronnej
 \end{itemize}
 
 \pagebreak
@@ -57,15 +58,36 @@
 
 
 \section{Otwarcie 1\major}
-\subsection{1\hearts\ --- ?}
+\subsection{Na 1 i 2 ręce}
 \begin{itemize}
-    \item 1\nt\ - semi-forsujące, może zawierać 3-6 z fitem lub zwykły inwit z fitem
-    \item 2\hearts\ - 7-10, konstruktywne
-    \item 2\nt\ - \textbf{Jacoby}, 4+\hearts, \gf. Wyklucza range silnych splinterów.
-    \item 3\clubs\ - 10-11
-    \item 3\diams\ - 7-9
-    \item 3\hearts\ - 0-6
+    \item 1\nt: nieforsujące, może zawierać 3-6 z fitem
+    \item Bergeny:
+    \subitem 3\clubs\ - silny: \hhand{Axx}{Jxxx}{Kx}{Qxxx}
+    \subitem 3\diams\ - mixed: \hhand{Axx}{xxxx}{Kx}{Jxxx}
+    \subitem 3M - blok: \hhand{Qxx}{xxxx}{x}{Jxxxx}
+    \item Inwit z krótkością (2M+1): \hhand{Kxx}{xxxx}{x}{KJTxx}
+    \subitem +1 pytanie, odp. niska -- średnia -- wyskoka
+    \item Inwit siłowy (1\hearts\ --- 2\nt, 1\spades\ --- 3\hearts): \hhand{Axx}{Kxx}{Kx}{Jxxxx}
+    \item Bilansowe podniesienie - między silnym Bergenem a \gf\ (4M-1): \\ \hhand{KQ}{xxxx}{KJx}{Qxxx}
 \end{itemize}
+
+\subsection{Na 3 i 4 ręce}
+\begin{itemize}
+    \item 1\nt: nieforsujące, może zawierać 3-6 z fitem
+    \item 2\clubs\ - Drury. Używamy agresywnie w sile Mixed Raise+ \\
+        \hhand{KTxx}{x}{KTxxx}{xxx} to takie minimum
+    \subitem 2\diams\ - inwit (jakieś 13-16), również 1\spades\ - 2\hearts\ = NAT 
+    \subitem 2\major\ - poniżej otwarcia (8-12)
+    \subitem Wszystko powyżej = 17+ i ustawia \gf.
+    \item 2\major\ - 4-7(8), śmieciowe
+    \item 2M+1 - MAX z dokładnie singlem, +1 pytanie, odp. niski -- średni -- wyskoki
+    \item Splintery jak na pierwszej, tyle, że 10-11 \textbf{z renonsu}
+    \item 3\clubs, 3\diams, 1\spades\ - 3\hearts\ - Kolor+fit
+\end{itemize}
+
+
+\pagebreak
+
 
 \section{Licytacja po rebidzie 1\ntx\ (12-14) otwierającego}
 \begin{itemize}
@@ -94,13 +116,23 @@
     \item 2\spades\ - transfer na \clubs\ lub inwit do 2\nt
     \subitem 2\nt\ - minimum bilansowe
     \subitem 3\clubs\ - maksimum bilansowe
-    \item 2\nt\ - transfer na \diams\
-    \subitem 3\clubs\ - nie lubię kar i minimum
-    \subitem 3\diams\ - lubię kara lub maximum
+    \item 2\nt\ - transfer na \diams\ (może być jakieś 5/5 \minor)
+    \subitem 3\clubs\ - wolę trefle od kar
+    \subitem 3\diams\ - wolę kara od trefli
     \item 3\clubs\ - Puppet
     \item 3\diams\ - 22(5/4)
     \item 3\hearts, 3\spades\ - młode co najmniej 5/4, krótkość
     \item 4\clubs\ - 5/5 \major\
+\end{itemize}
+
+\subsection{Szczególne sekwencje}
+\begin{itemize}
+    \item 1\nt\ - 2\clubs\ --- 2\diams\ - 2\spades\ = \inv\ z 5\spades, 4\hearts
+    \item 1\nt\ - 2\diams\ --- 2\hearts\ - 2\spades\ = \inv\ z 5\hearts, 4\spades
+    \item 1\nt\ - 2\clubs\ --- 2\hearts\ - 2\spades\ = silne ustalenie kierów bez krótkości
+    \item 1\nt\ - 2\clubs\ --- 2\spades\ - 3\hearts\ = silne ustalenie pików bez krótkości
+    \item Po transferze nie ma ustalenia forsującego do szlemika - używamy dużego transferu i poziomu 5!
+    \item Mały transfer i skok na 4 = inwit do szlemika, \textbf{nie boimy się} go przyjmować na poziom 5.
 \end{itemize}
 
 
@@ -173,7 +205,34 @@ jeśli się go ma.
 % **** %
 \pagebreak
 \section{Licytacja po otwarciu 2\clubs}
-TODO
+\subsection{Założenia}
+\begin{itemize}
+    \item Odpowiedzi kontrolami 0-1 --- 2 --- 3+, po 2\major\ jest \gf
+\end{itemize}
+
+\subsection{2\clubs\ - 2\diams\ --- ?}
+\begin{itemize}
+    \item 2\hearts\ - relay do 2\spades, kiery lub 24-25 na równym
+    \subitem 2\nt\ - 24-25 na równym
+    \subitem 3\clubs\ - 6+\hearts
+    \subitem 3\diams\ - 5\hearts\ + (4)5\diams
+    \subitem 3\hearts\ - 5\hearts\ + (4)5\clubs
+    \subitem 3\spades\ - 5\hearts\ + 4\spades, 4\clubs\ ustala \hearts, 4\diams\ ustala \spades.
+    \subitem 3\nt\ - 6\hearts 332, dobra karta do 3\nt
+    \item 3\diams\ - 6+\diams, bez starszych czwórek
+    \item 3\hearts\ = 5+\diams, 4\hearts
+    \item 3\spades\ = 5+\diams, 4\spades
+\end{itemize}
+
+\subsection{Po wejściu przeciwnika}
+\begin{itemize}
+    \item 2\clubs\ - \enemy{\dbl}: \rdbl\ = 0/1K, \pass\ = 2+K, 2\diams\hearts\spades\ = 2+K, kolor 5+ z 3H
+    \item 2\clubs\ - \enemy{2\diams}: \dbl\ = 0/1K, \pass\ = 2+K, 2\hearts\spades\ = 2+K, kolor 5+ z 3H
+    \item 2\clubs\ - \enemy{2\hearts+}: \dbl\ = słaba ręka, \pass\ = dobra ręka, 2\spades\ = 5+, 3H
+    \item 2\clubs\ - \enemy{2X}\ - \pass\ - \enemy{\pass}: \dbl\ = T/O
+    \item 2\clubs\ - \enemy{\pass}\ - 2\diams\ - \enemy{2X}: \dbl\ = T/O, \pass\ = może trap, ODP \dbl\ jest T/O 
+    \item 2\clubs\ - \enemy{\pass}\ - 2\major\ - \enemy{2X}: \dbl\ = karna
+\end{itemize}
 
 
 % ************************* %
@@ -202,20 +261,15 @@ TODO
     \end{itemize}
 \end{itemize}
 
-\subsection{2\diams\ --- 2\ntx \\ ?}
-\inv+, z fitem lub bez.
+\subsection{Dodatkowe ustalenia}
 \begin{itemize}
-    \item 3\clubs\ - minimum, słaby kolor
-    \item 3\diams\ - maximum, słaby kolor
-    \item 3\hearts\ - minimum, dobry kolor
-    \item 3\spades\ - maximum, dobry kolor
+    \item 2\nt\ = pytanie o wartość
+    \item 2\diams\ - 3\hearts, 2\hearts\ - 3\spades, 2\spades\ - 4\clubs\ = Keycard.
+    \item 2\diams\hearts\spades\ - 2\nt\ --- 3X - 4\clubs\ = Keycard.
+    Odpowiedzi 0/1/1Q/2/2Q.
 \end{itemize}
 
-\subsection{Definicje range'u i jakości}
-\begin{itemize}
-    \item Dobry kolor to co najmniej AQT na pierwszej i drugiej oraz co najmniej KJT na trzeciej
-    \item Maksimum to 8+PC lub wyrobialny kolor + dojście bokiem, np \\ \hhand{Kxx}{x}{KJT9xx}{xxx}
-\end{itemize}
+
 
 
 % ********************* %
@@ -252,7 +306,7 @@ Streszczenie kontynuacji w 3 zdania:
     \item 3\diams\ - pytanie o krótkość*, 5+\spades
     \item 3\hearts\ - \gf\ z 4\spades
 \end{itemize}
-* tutaj pokazanie krótkości wysokiej (\hearts) jest \gf\ NO I HUJ
+* tutaj pokazanie krótkości wysokiej (\hearts) jest \gf\ NO I HUJ MORZE PUJDZIE
 
 
 
@@ -264,7 +318,7 @@ Streszczenie kontynuacji w 3 zdania:
 W sekwencjach 1\hearts\ --- 1\spades, 1\hearts\ --- 1\nt\ oraz 1\spades\ --- 1\nt, rebid 2\clubs\
 jest naturalny, lub z dowolną ręką 16+. Odpowiedź 2\diams\ na to 2\clubs\ jest sztuczna i pokazuje 8+ oraz ustawia \gf.
 
-\subsection{1\major\ --- 1X \\ 2\clubs\ --- ?}
+\subsection{1\major\ - 1X --- 2\clubs\ - ?}
 \begin{itemize} 
     \item 2\diams\ - \textbf{dowolne 8+}
     \subitem 2\major\ - "Moje trefle były naturalne i mam jednak 11-15"
@@ -279,9 +333,18 @@ jest naturalny, lub z dowolną ręką 16+. Odpowiedź 2\diams\ na to 2\clubs\ je
     \item \textbf{Wyjątek} - 1\hearts\ --- 1\spades\ / 2\clubs\ --- 3\spades\ = 10-11 \inv\ z 6+\spades
 \end{itemize}
 
+\subsection{1\hearts\ - 1\spades\ --- 2\clubs\ - 2\diams\ --- ?}
+\begin{itemize}
+    \item 2\spades\ - 5+\hearts, \textbf{3\spades}, 16+
+    \item 3\hearts\ - 6+\hearts, bez 3 pików, 16+
+    \item 3\spades\ - silne ustalenie \spades\ bez krótkości
+\end{itemize}
 
-
-
+\subsection{Inne ustalenia}
+\begin{itemize}
+    \item 1\major\ - 1X --- 2\nt\ = silne 6\major\ + 5\minor. \\ 3\clubs\ pytanie, 
+    3\diams\ = \clubs, 3\hearts\ = \diams, 3\spades\ = 6\spades5\hearts\ (tylko po 1\spades)
+\end{itemize}
 
 
 
@@ -377,25 +440,32 @@ Inne kolory z przeskokiem to kolor+fit.
     \item 3\spades\ - 6-10 z fitem \spades
 \end{itemize}
 
-\subsection{Przeciwko multi i dwukoloruwkom po otwarciu 1\clubs}
-TODO: Naprawić to
-\subsubsection{1\clubs\ --- (2\diams\ Multi) --- ?}
-\begin{itemize}
-    \item 2\hearts, 2\spades\ - słabe naturalne
-    \item 2\nt\ coś jakby trefle
-    \item 3\clubs\ coś jakby dzwonki
-    \item 3\diams\ - \inv+ na \hearts
-    \item 3\hearts\ - \inv+ na \spades
-\end{itemize}
-\dots
+\pagebreak
 
 
+\section{Licytacja po wejściu}
+
+\pagebreak
+
+
+\section{Licytacja po bloku przeciwnika}
+
+\pagebreak
+
+
+\section{Licytacja po wejściu 1\ntx}
+
+\pagebreak
+
+
+\section{Licytacja przeciwko 1\ntx\ przeciwnika}
+
+\pagebreak
 
 
 % ***************************** %
 % Kontry karne i pasy forsujące %
 % ***************************** %
-\pagebreak
 \section{Sekwencje karne}
 \subsection{Ustalone sekwencje kontry karnej}
 \begin{table}[h!]
@@ -410,6 +480,24 @@ TODO: Naprawić to
     }
 \end{table}
 
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        2\clubs & \enemy{\pass} & 2\hearts/2\spades & \enemy{2X} \\
+        \dbl
+    \end{tabular}
+    \caption*{
+        Trzeba przeciwnika trzymać za pysk żeby nie wchodził tak 
+    }
+\end{table}
+
+\subsection{Ustalone sekwencje pasa forsującego}
+\begin{itemize}
+    \item Jeśli mamy \gf\ oraz fit, a przeciwnik wchodzi, \pass\ pokazuje krótkość lub wyłączenie w kolorze wejścia.
+    Powrót na kolor jest odzywką podstawową.
+    \item Jeśli pójdzie blok na trzeciej ręce, nasze wejście, oraz ten blok zostanie podniesiony powyżej
+    naszej końcówki, \pass\ jest forsujący
+\end{itemize}
 
 
 \end{document} 
