--- a/Zgrubsza/zgrubsza.tex
+++ b/Zgrubsza/zgrubsza.tex
@@ -161,6 +161,7 @@ W jednostronnej licytacji naturalnej, czyli takiej, która nie wpadnie w relay'e
     \item 3\clubs\ - \gf\ transfer na 6+\hearts\ (+1 silne przyjęcie)
     \item 3\diams\ - \gf\ transfer na 6+\spades\ (+1 silne przyjęcie)
     \item 3\hearts\ - krótkość \hearts, \gf\ (może mieć 4\spades)
+    \item 3\spades\ - transfer na \nt
 \end{itemize}
 
 \pagebreak
