--- a/other/1_otwarcia.tex
+++ b/other/1_otwarcia.tex
@@ -26,7 +26,7 @@
             4 & 130 & 130 & \cy420 & \cy420 & \cy430 \\
             5 & \cy400 & \cy400 & \cy450 & \cy450 & \cy460 \\
             6 & \co920 & \co920 & \co980 & \co980 & \co990 \\
-            7 & \cx1440 & \cx1440 & \cx1520 & \cx1520 & \cx1530 \\
+            7 & \cx1440 & \cx1440 & \cx1510 & \cx1510 & \cx1520 \\
         \end{tabular}
         \caption{Punktacja}
     \end{table} 
@@ -238,15 +238,18 @@
     \subsubsection{Transfery}
     Odpowiedzi 2\diams\ i 2\hearts\ oznaczają odpowiednio 5+\hearts\ i 5+\spades. Dlaczego?
     \begin{itemize}
-        \item Chcemy podtrzymać licytację, by odpowiadający mógł się odezwać jeszcze raz
-        \item Lepiej, żeby rozgrywała ręka silniejsza, bo:
-        \item Figury są ukryte i przeciwnicy ich nie widzą
+        \item Chcemy, żeby licytacja wróciła do nas - możemy mieć rękę w dowolnej sile od 0 do 25PC!
+        \item Wiemy dokładnie jaką siłę ma partner, więc to my podejmiemy decyzję co do wysokości kontraktu, a nie on
+        \item Lepiej, żeby rozgrywała ręka silniejsza, ponieważ:
+        \item Figury otwierającego są ukryte i przeciwnicy ich nie widzą, przez co trudniej im się broni
         \item Wist jest w kierunku silnej ręki i czasami da nam to dodatkową lewę, np jak mamy AQ w kolorze wistu.
-        \item Z kartą typu \hhand{J9854}{7}{652}{9754} lepiej grać 2\spades\ na 7 atutach niż 1\nt.
+        \item Z kartą typu \hhand{J9854}{7}{652}{9754} lepiej grać 2\spades\ na 7 atutach niż 1\nt,
+        szczególnie, że czasami trafimy do fitu u partnera.
     \end{itemize}
 
     Otwierający musi zaakceptować transfer licytując kolor o 1 wyżej. Zauważmy, że jeśli mamy 6+
-    kart w kolorze, na który transferujemy, to mamy fit, bo partner ma co najmniej dwie. Jeśli mamy dokładnie 5, należy
+    kart w kolorze, na który transferujemy, to mamy fit, bo partner ma co najmniej dwie. Jeśli mamy dokładnie 5
+    i dostatecznie silną kartę, należy
     zaproponować grę w \nt, którą otwierający może poprawić na kolorową jeśli ma fit.
 
     W poniższych przykładach partner otwiera 1\nt, a następnie akceptuje transfer na piki przez 2\spades.
@@ -263,8 +266,10 @@
         \end{tabular}
     \end{table} 
 
+    \pagebreak
+
     \subsubsection{Ani Stayman, ani transfer}
-    Licytujemy \nt\ z bilansu. Poniżej partner otwiera 1\nt.
+    Licytujemy \nt\ z bilansu, licząc jak blisko jesteśmy magicznego 25. Poniżej partner otwiera 1\nt.
     \begin{table}[h!]
         \centering
         \setlength{\extrarowheight}{3pt}
@@ -277,5 +282,130 @@
         \end{tabular}
     \end{table} 
 
+    \section{Podsumowanie}
+    \subsection{Otwarcia}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Otwarcie} & \textbf{Znaczenie} \\
+            1\clubs & 5+\clubs\ 12+ \textbf{lub} zrównoważone 12-14 \textbf{lub} zrówn. 18-20 \\ 
+            1\diams & 5+\diams\ 12+, brak 5\major\ \textbf{lub} skład 4441 z czterema \diams \\
+            1\hearts & 5+\hearts, 12+ \\
+            1\spades & 5+\spades, 12+ \\
+            1\nt & zrównoważone 15-17, może mieć pięciokart, jeśli jest w składzie 5332
+        \end{tabular}
+    \end{table}
+
+    \subsection{Odpowiedzi na otwarcie 1\clubs}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odpowiedź} & \textbf{Znaczenie} \\
+            1\diams & Słaba ręka 0-6, skład dowolny \\
+            1\hearts & 4+\hearts, 7+ \\
+            1\spades & 4+\spades, 7+ \\
+            2\clubs\ & 5+\clubs, 13+ \\
+            2\diams\ & 5+\diams, 13+ \\
+            2\hearts\ & 5+\hearts, 13+ \\
+            2\spades\ & 5+\spades, 13+ \\
+            1\nt & 7-10, brak starszej czwórki \\
+            2\nt & 11-12, j.w. \\
+            3\nt & 13+, j.w.
+        \end{tabular}
+    \end{table}
+
+    \subsection{Odpowiedzi na otwarcie 1\diams}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odpowiedź} & \textbf{Znaczenie} \\
+            1\hearts & 4+\hearts, 7+ \\
+            1\spades & 4+\spades, 7+ \\
+            2\clubs\ & 5+\clubs, 13+ \\
+            2\diams\ & 4+\diams, 7+, brak starszej czwórki \\
+            2\hearts\ & 5+\hearts, 13+ \\
+            2\spades\ & 5+\spades, 13+ \\
+            1\nt & 7-10, brak starszej czwórki \\
+            2\nt & 11-12, j.w. \\
+            3\nt & 13+, j.w.
+        \end{tabular}
+    \end{table}
+
+    \subsection{Odpowiedzi na otwarcie 1\hearts}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odpowiedź} & \textbf{Znaczenie} \\
+            1\spades & 4+\spades, 7+ \\
+            2\clubs\ & 5+\clubs, 13+ \\
+            2\diams\ & 5+\diams, 13+ \\
+            2\spades\ & 5+\spades, 13+ \\
+            2\hearts\ & 3+\hearts, 7-10 \\
+            3\hearts\ & 3+\hearts, 11-12 \\
+            4\hearts\ & 3+\hearts, 13+ \\
+            1\nt & 7-10, brak starszej czwórki \\
+            2\nt & 11-12, j.w. \\
+            3\nt & 13+, j.w.
+        \end{tabular}
+    \end{table}
+
+    \pagebreak
+    \subsection{Odpowiedzi na otwarcie 1\spades}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odpowiedź} & \textbf{Znaczenie} \\
+            2\clubs\ & 5+\clubs, 13+ \\
+            2\diams\ & 5+\diams, 13+ \\
+            2\hearts\ & 5+\hearts, 13+ \\
+            2\spades\ & 3+\spades, 7-10 \\
+            3\spades\ & 3+\spades, 11-12 \\
+            4\spades\ & 3+\spades, 13+ \\
+            1\nt & 7-10, brak starszej czwórki \\
+            2\nt & 11-12, j.w. \\
+            3\nt & 13+, j.w.
+        \end{tabular}
+    \end{table}
+
+    \subsection{Odpowiedzi na otwarcie 1\ntx}
+    \vspace*{-6mm}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odpowiedź} & \textbf{Znaczenie} \\
+            2\clubs & Pytanie o starszą czwórkę \\
+            2\diams & Transfer na kiery, 5+\hearts, \textbf{0+ PC} \\
+            2\hearts & Transfer na piki, 5+\spades, \textbf{0+ PC} \\
+            2\nt & 8-9, brak starszych czwórek \\
+            3\nt & 10+, brak starszych czwórek
+        \end{tabular}
+    \end{table}
+
+    \subsubsection{Po Staymanie: 1\ntx\ - 2\clubs\ --- 2\hearts\ - ?}
+    \vspace*{-6mm}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odzywka} & \textbf{Znaczenie} \\
+            2\nt & Brak fitu \hearts\ i inwit (8-9) \\
+            3\hearts & Fit \hearts\ i inwit (8-9) \\
+            3\nt & Brak fitu \hearts\ i forsing (10+) \\
+            4\hearts\ & Fit \hearts\ i forsing (10+)
+        \end{tabular}
+    \end{table}
+
+    \subsubsection{Po transferze: 1\ntx\ - 2\diams\ --- 2\hearts\ - ?}
+    \vspace*{-6mm}
+    \begin{table}[h!]
+        \centering
+        \begin{tabular}{cl}
+            \textbf{Odzywka} & \textbf{Znaczenie} \\
+            \pass & 5\hearts i 0-7 \\
+            2\nt & 5\hearts\ i inwit (8-9) \\
+            3\hearts & 6+\hearts\ i inwit (8-9) \\
+            3\nt & 5\hearts\ i forsing (10+) \\
+            4\hearts\ & 6+\hearts\ i forsing (10+)
+        \end{tabular}
+    \end{table}
 
 \end{document}
